remove unused lib

--- a/JayLib/.classpath
+++ b/JayLib/.classpath
@@ -23,5 +23,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/simplemagic-1.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
