--- a/JayLib/.classpath
+++ b/JayLib/.classpath
@@ -18,10 +18,11 @@
 	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.4.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/joda-time-2.8.1.jar"/>
 	<classpathentry kind="lib" path="lib/bcprov-jdk15on-157.jar"/>
-	<classpathentry kind="lib" path="lib/dropbox-core-sdk-1.8.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.10.jar"/>
 	<classpathentry kind="lib" path="lib/unirest-java-1.4.9.jar"/>
-	<classpathentry kind="lib" path="lib/pCloud.jar"/>
+	<classpathentry kind="lib" path="lib/okhttp-3.9.0.jar"/>
+	<classpathentry kind="lib" path="lib/okio-1.13.0.jar"/>
+	<classpathentry kind="lib" path="lib/dropbox-core-sdk-3.0.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_131"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
