--- a/JayLib/.classpath
+++ b/JayLib/.classpath
@@ -23,6 +23,8 @@
 	<classpathentry kind="lib" path="lib/okhttp-3.9.0.jar"/>
 	<classpathentry kind="lib" path="lib/okio-1.13.0.jar"/>
 	<classpathentry kind="lib" path="lib/dropbox-core-sdk-3.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/box-java-sdk-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/minimal-json-0.9.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_131"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
